Fix text spacing

--- a/assets/src/less/core.less
+++ b/assets/src/less/core.less
@@ -29,7 +29,7 @@ header { background:#4fcdc4; padding:18px 0 12px; margin:0 0 30px; border-bottom
       img { max-width:100%; margin:0 auto; }
     }
     figcaption { padding:18px 12px 12px; 
-      .product--item__title { font-family:'Open Sans', 'sans-serif'; margin-bottom:3px; display:inline-block; white-space:nowrap; overflow:hidden; text-overflow:ellipsis; width:100%; }
+      .product--item__title { font-family:'Open Sans', 'sans-serif'; display:inline-block; white-space:nowrap; overflow:hidden; text-overflow:ellipsis; width:100%; }
       .product--item__price { font-family:'Open Sans', 'sans-serif'; display:block; color:@brand-primary; }
     }
   }
